[package]
name = "cctp"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/circle-iris"]

[dependencies]
alloy-chains = "0.2"
alloy-network = "1.7"
alloy-primitives = "1.4"
alloy-provider = { version = "1.7", default-features = false, features = ["reqwest"] }
alloy-signer = "1.7"
clap = { version = "4.5", features = ["derive", "env"] }
cctp-rs = "2.1.2"
circle-iris = { path = "crates/circle-iris" }
foundry-wallets = { git = "https://github.com/foundry-rs/foundry.git", rev = "b0a9dd9ceda36f63e2326ce530c10e6916f4b8a2" }
progenitor-client = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
