[package]
name = "circle-iris"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"], default-features = false }
futures = "0.3"
progenitor = "0.13"
regress = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
